--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -74,7 +74,7 @@
     <string name="menu_copy_url">Copy URL</string>
     <string name="menu_export_update">Export update</string>
     <string name="menu_show_changelog">Show changelog</string>
-    <string name="menu_changelog_url" translatable="false">https://raw.githubusercontent.com/ZenX-OS/ZenX_Updater/ten/{device}<xliff:g id="device_name">%1$s</xliff:g>/changelog</string>
+    <string name="menu_changelog_url" translatable="false">https://raw.githubusercontent.com/ZenX-OS/ZenX_Updater/ten/<xliff:g id="device_name">%1$s</xliff:g>/changelog.txt</string>
     <string name="menu_ab_perf_mode">Install updates faster</string>
 
     <string name="snack_updates_found">New updates found</string>
